# VoiceSummary-onDeviceAI

./: .gitignore  back.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/kr/jm/voicesummary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/kr/jm/voicesummary/: MainActivity.kt  VoiceSummaryApp.kt
app/src/main/java/kr/jm/voicesummary/audio/: AudioRecorder.kt
app/src/main/java/kr/jm/voicesummary/core/audio/: AudioPlayer.kt  AudioRecorder.kt
app/src/main/java/kr/jm/voicesummary/core/llm/: LlmModel.kt  LlmModelDownloader.kt  LlmSummarizer.kt
app/src/main/java/kr/jm/voicesummary/core/stt/: SherpaModelDownloader.kt  SherpaTranscriber.kt  SttModel.kt
app/src/main/java/kr/jm/voicesummary/core/whisper/: WhisperLib.kt  WhisperTranscriber.kt
app/src/main/java/kr/jm/voicesummary/data/audio/: AudioRepositoryImpl.kt
app/src/main/java/kr/jm/voicesummary/data/billing/: BillingRepositoryImpl.kt
app/src/main/java/kr/jm/voicesummary/data/local/: AppDatabase.kt  RecordingDao.kt  RecordingEntity.kt
app/src/main/java/kr/jm/voicesummary/data/repository/: RecordingRepositoryImpl.kt
app/src/main/java/kr/jm/voicesummary/data/stt/: SttRepositoryImpl.kt
app/src/main/java/kr/jm/voicesummary/di/: AppContainer.kt
app/src/main/java/kr/jm/voicesummary/domain/model/: Recording.kt  SttModel.kt
app/src/main/java/kr/jm/voicesummary/domain/repository/: AudioRepository.kt  BillingRepository.kt  RecordingRepository.kt  SttRepository.kt
app/src/main/java/kr/jm/voicesummary/presentation/list/: RecordingListScreen.kt  RecordingListUiState.kt  RecordingListViewModel.kt
app/src/main/java/kr/jm/voicesummary/presentation/recording/: RecordingScreen.kt  RecordingUiState.kt  RecordingViewModel.kt
app/src/main/java/kr/jm/voicesummary/presentation/settings/: LicensesScreen.kt  SettingsScreen.kt
app/src/main/java/kr/jm/voicesummary/service/: RecordingService.kt
app/src/main/java/kr/jm/voicesummary/ui/: RecordingScreen.kt
app/src/main/java/kr/jm/voicesummary/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/kr/jm/voicesummary/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
